# bulk-renamer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
bulk_renamer/: commands.py  constants.py  functions.py  main.py
bulk_renamer/cli/: add.py  case.py  cmd.py  main.py
bulk_renamer/cli/utils/: functions.py
bulk_renamer/utils/: functions.py
