[tool.poetry]
name = "bulk-renamer"
version = "0.1.0"
description = "A simple CLI to rename files"
authors = ["Filipe <filipediascontato@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
