[tool.poetry]
name = "bulk-renamer"
version = "0.1.0"
description = "A simple CLI to rename files"
authors = ["Filipe Dias <filipediascontato@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
br = "bulk_renamer.cli.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.1"
black = "^21.5b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
