[tool.poetry]
name = "bulk-renamer"
version = "0.5.0"
description = "A simple CLI to rename files"
authors = ["Filipe Dias <filipediascontato@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
br = "bulk_renamer.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
rich = "^10.2.0"
InquirerPy = "^0.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.1"
black = "^21.5b0"
flake8 = "^3.9.2"
typer-cli = "^0.0.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
